Make Our Story text more personal and authentic

--- a/index.html
+++ b/index.html
@@ -251,20 +251,19 @@
       <div class="story-3d-box">
         <span class="section-eyebrow">Our Story</span>""
       <h2 class="story-title">
-        Built for busy days.<br>
-        Designed for clean, steady energy.
+        Three brothers.<br>
+        One simple idea.
       </h2>
 
       <div class="story-lede">
-        We are three brothers who wanted a clean, nutritious energy source
-        that fits into our fast-paced lives—without brewing coffee, chugging energy drinks, or cooking a full meal.
+        We got tired of the same routine: chugging coffee for energy, crashing an hour later, then reaching for another cup or some sugary snack just to make it through the day.
       </div>
 
       <div class="story-columns">
-        <p><strong>The problem:</strong> we needed focus that lasts, not jitters or a crash. Most options were either sugary,
-          inconvenient, or just didn’t feel good.</p>
-        <p><strong>Our answer:</strong> Ampra—real ingredients, natural caffeine, L-theanine, and electrolytes.
-          A bar you can grab on the run that delivers smooth focus and steady energy.</p>
+        <p>Between uni lectures, late-night study sessions, and trying to stay active, we realized there had to be something better. Something you could actually throw in your bag and eat between classes without feeling like garbage afterwards.</p>
+        <p>So we made it. Ampra is what we wish existed when we were pulling all-nighters and living off vending machine food. Real ingredients, clean energy, no BS. Just a bar that actually works.</p>
+        <p>So we made it. Ampra is what we wish existed when we were pulling all-nighters and living off vending machine food. Real ingredients, clean energy, no BS. Just a bar that actually works.</p>
+        <p>So we made it. Ampra is what we wish existed when we were pulling all-nighters and living off vending machine food. Real ingredients, clean energy, no BS. Just a bar that actually works.</p>
       </div>
       </div>
     </div>
