--- a/index.html
+++ b/index.html
@@ -1000,6 +1000,15 @@
         updateCarousel();
       }
 
+      // Click on cards to select them
+      cards.forEach((card, index) => {
+        card.addEventListener('click', () => {
+          if (index !== currentIndex) {
+            goToSlide(index);
+          }
+        });
+      });
+
       prevBtn.addEventListener('click', () => {
         goToSlide(currentIndex - 1);
       });
@@ -1019,25 +1028,6 @@
         if (e.key === 'ArrowLeft') goToSlide(currentIndex - 1);
         if (e.key === 'ArrowRight') goToSlide(currentIndex + 1);
       });
-
-      // Touch swipe support
-      let touchStartX = 0;
-      let touchEndX = 0;
-      const carousel = document.querySelector('.quantity-carousel');
-
-      carousel.addEventListener('touchstart', (e) => {
-        touchStartX = e.changedTouches[0].screenX;
-      }, { passive: true });
-
-      carousel.addEventListener('touchend', (e) => {
-        touchEndX = e.changedTouches[0].screenX;
-        handleSwipe();
-      }, { passive: true });
-
-      function handleSwipe() {
-        if (touchEndX < touchStartX - 50) goToSlide(currentIndex + 1);
-        if (touchEndX > touchStartX + 50) goToSlide(currentIndex - 1);
-      }
 
       // Initialize
       updateCarousel();
