Hide nutrition section on home page

--- a/index.html
+++ b/index.html
@@ -450,8 +450,8 @@
   
     </div>
   </section>
-<!-- ===== NUTRITION ===== -->
-<section id="nutrition" class="nt-section">
+<!-- ===== NUTRITION SECTION REMOVED ===== -->
+<section id="nutrition" class="nt-section" style="display: none;">
   <div class="container">
 
     <!-- Header -->
