Remove avatar circles and put initials under name in testimonials

--- a/index.html
+++ b/index.html
@@ -703,8 +703,8 @@
         <div class="sp-stars" aria-label="5 stars">★★★★★</div>
         <blockquote>“Best on-the-go snack, especially when dealing with tiring children, without the crash.”</blockquote>
         <footer class="sp-who">
-          <span class="sp-avatar">HW</span>
-          <div><strong>Helena W</strong><small>Mother</small></div>
+          <div class="sp-name">Helena W</div>
+          <div class="sp-initials">HW</div>
         </footer>
       </article>
 
@@ -712,8 +712,8 @@
         <div class="sp-stars" aria-label="5 stars">★★★★★</div>
         <blockquote>“The Ampra actually helps me study and lock in for my difficult exams.”</blockquote>
         <footer class="sp-who">
-          <span class="sp-avatar">GL</span>
-          <div><strong>Gustaf L</strong><small>Student</small></div>
+          <div class="sp-name">Gustaf L</div>
+          <div class="sp-initials">GL</div>
         </footer>
       </article>
     </div>
