Ensure hero subtext has proper baseline alignment

--- a/index.html
+++ b/index.html
@@ -700,6 +700,7 @@
     <!-- Testimonials -->
     <div class="sp-grid">
       <article class="sp-card">
+        <div class="sp-stars" aria-label="5 stars">★★★★★</div>
         <blockquote>“Best on-the-go snack, especially when dealing with tiring children, without the crash.”</blockquote>
         <footer class="sp-who">
           <div class="sp-name">Helena W</div>
