Remove product description from quantity section subtitle

--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
       <span class="section-eyebrow">Our Product</span>
       <h2 class="products-title">Choose Your Quantity</h2>
       <p class="products-subtitle">
-        Ampra Energy Bar — Clean caffeine, L-theanine focus, and plant-based nutrition. Pick the pack that fits your routine.
+        Pick the pack that fits your routine.
       </p>
     </div>
 
