Change Our Story heading to 'Why was Ampra created?'

--- a/index.html
+++ b/index.html
@@ -246,7 +246,7 @@
     <!-- LEFT: copy -->
     <div class="story-copy">
       <div class="story-3d-box">
-        <span class="section-eyebrow">Our Story</span>""
+        <span class="section-eyebrow">Why was Ampra created?</span>""
       <h2 class="story-title">
         Three brothers.<br>
         One simple idea.
