Remove stats band from What people say section

--- a/index.html
+++ b/index.html
@@ -710,6 +710,7 @@
 
       <article class="sp-card">
         <blockquote>“The Ampra actually helps me study and lock in for my difficult exams.”</blockquote>
+        <div class="sp-stars" aria-label="5 stars">★★★★★</div>
         <footer class="sp-who">
           <div class="sp-name">Gustaf L</div>
           <div class="sp-initials">GL</div>
@@ -717,25 +718,7 @@
       </article>
     </div>
 
-    <!-- Stats band (safe, factual) -->
-    <div class="sp-band">
-      <div class="sp-stat">
-        <div class="sp-num">Pre-release</div>
-        <div class="sp-label">In development</div>
-      </div>
-      <div class="sp-stat">
-        <div class="sp-num">0</div>
-        <div class="sp-label">Artificial sweeteners</div>
-      </div>
-      <div class="sp-stat">
-        <div class="sp-num">100%</div>
-        <div class="sp-label">Plant-based</div>
-      </div>
-      <div class="sp-stat">
-        <div class="sp-num">EU</div>
-        <div class="sp-label">Made in Europe</div>
-      </div>
-    </div>
+
 
   </div>
 </section>
