Move full stop inside em tag to match Good styling

--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
       <div class="container">
         <!-- LEFT: Catchy Text -->
         <div class="hero-text-side">
-          <h1 class="hero-headline">Energy that feels <em>Good</em>.</h1>
+          <h1 class="hero-headline">Energy that feels <em>Good.</em></h1>
           <p class="hero-subtext">Clean caffeine. No crash. Smooth focus.</p>
           <div class="hero-cta-group">
             <a href="#products" class="cta-primary">Get Ampra</a>
