Reorder hero section: text above, orange blocks below

--- a/index.html
+++ b/index.html
@@ -57,22 +57,7 @@
 
  <!-- ===== HERO ===== -->
   <section class="hero hero--colorblock" id="home">
-    <div class="hero-colorblock-wrapper">
-      <!-- Bold color blocks -->
-      <div class="color-block block-tagline">
-        <div class="container">
-          <h2 class="block-text">the bar that gives you clean energy</h2>
-        </div>
-      </div>
-      
-      <div class="color-block block-accent">
-        <div class="container">
-          <h2 class="block-text">without the crash</h2>
-        </div>
-      </div>
-    </div>
-
-    <!-- Content below blocks -->
+    <!-- Content first -->
     <div class="hero-details">
       <div class="container">
         <!-- LEFT: Catchy Text -->
@@ -103,6 +88,22 @@
               </div>
             </div>
           </article>
+        </div>
+      </div>
+    </div>
+
+    <!-- Color blocks below -->
+    <div class="hero-colorblock-wrapper">
+      <!-- Bold color blocks -->
+      <div class="color-block block-tagline">
+        <div class="container">
+          <h2 class="block-text">the bar that gives you clean energy</h2>
+        </div>
+      </div>
+      
+      <div class="color-block block-accent">
+        <div class="container">
+          <h2 class="block-text">without the crash</h2>
         </div>
       </div>
     </div>
