Add split image promo section with product showcases

--- a/index.html
+++ b/index.html
@@ -63,6 +63,7 @@
         <!-- LEFT: Catchy Text -->
         <div class="hero-text-side">
           <h1 class="hero-headline">Energy that feels <em>Good.</em></h1>
+          <p class="hero-description">A plant-based energy bar powered by green tea caffeine, protein, and slow-release carbs — made for focus, balance, and steady energy all day.</p>
           <p class="hero-subtext">Clean caffeine. No crash. Smooth focus.</p>
           <div class="hero-cta-group">
             <a href="#products" class="cta-primary">Get Ampra</a>
@@ -108,6 +109,41 @@
       </div>
     </div>
   </section>
+
+<!-- ===== SPLIT IMAGE PROMO SECTION ===== -->
+<section class="split-promo-section">
+  <div class="split-promo-grid">
+    
+    <!-- Top Row: Image Left, Text Right -->
+    <div class="split-promo-row">
+      <div class="split-promo-image">
+        <img src="protien bar inspo.jpg" alt="Energy bars" />
+      </div>
+      <div class="split-promo-content">
+        <p class="split-promo-eyebrow">Order 2 Boxes</p>
+        <h2 class="split-promo-title">SAVE 20%</h2>
+        <div class="split-promo-divider"></div>
+        <p class="split-promo-text">I'm a paragraph. Double click here or click Edit Text to add some text of your own or to change the font. Tell your visitors a bit about your services.</p>
+        <a href="#products" class="split-promo-btn">Shop Now</a>
+      </div>
+    </div>
+
+    <!-- Bottom Row: Text Left, Image Right -->
+    <div class="split-promo-row split-promo-row-reverse">
+      <div class="split-promo-content">
+        <p class="split-promo-eyebrow">Try Our</p>
+        <h2 class="split-promo-title">NEWEST FLAVOR</h2>
+        <div class="split-promo-divider"></div>
+        <p class="split-promo-text">I'm a paragraph. Double click here or click Edit Text to add some text of your own or to change the font. Tell your visitors a bit about your services.</p>
+        <a href="#products" class="split-promo-btn">Shop Now</a>
+      </div>
+      <div class="split-promo-image">
+        <img src="peanut butter.jpg" alt="Peanut butter" />
+      </div>
+    </div>
+
+  </div>
+</section>
 
 <!-- ===== PRODUCTS SECTION ===== -->
 <section id="products" class="products-section" data-fade-scope>
