Make story boxes wide instead of tall with horizontal layout

--- a/index.html
+++ b/index.html
@@ -291,18 +291,24 @@
 
       <div class="story-boxes-grid">
         <div class="story-box story-box-problem">
-          <h3>The Problem</h3>
-          <p>We got tired of the same routine: chugging coffee for energy, crashing an hour later, then reaching for another cup or some sugary snack just to make it through the day.</p>
+          <div class="story-box-content">
+            <h3>The Problem</h3>
+            <p>We got tired of the same routine: chugging coffee for energy, crashing an hour later, then reaching for another cup or some sugary snack just to make it through the day.</p>
+          </div>
         </div>
 
         <div class="story-box story-box-realization">
-          <h3>The Realization</h3>
-          <p>Between uni lectures, late-night study sessions, and trying to stay active, we realized there had to be something better. Something you could actually throw in your bag and eat between classes without feeling like garbage afterwards.</p>
+          <div class="story-box-content">
+            <h3>The Realization</h3>
+            <p>Between uni lectures, late-night study sessions, and trying to stay active, we realized there had to be something better. Something you could actually throw in your bag and eat between classes without feeling like garbage afterwards.</p>
+          </div>
         </div>
 
         <div class="story-box story-box-solution">
-          <h3>The Solution</h3>
-          <p>So we made it. Ampra is what we wish existed when we were pulling all-nighters and living off vending machine food. Real ingredients, clean energy, no BS. Just a bar that actually works.</p>
+          <div class="story-box-content">
+            <h3>The Solution</h3>
+            <p>So we made it. Ampra is what we wish existed when we were pulling all-nighters and living off vending machine food. Real ingredients, clean energy, no BS. Just a bar that actually works.</p>
+          </div>
         </div>
       </div>
       </div>
