--- a/index.html
+++ b/index.html
@@ -120,10 +120,10 @@
         <img src="protien bar inspo.jpg" alt="Energy bars" />
       </div>
       <div class="split-promo-content">
-        <p class="split-promo-eyebrow">Order 2 Boxes</p>
-        <h2 class="split-promo-title">SAVE 20%</h2>
+        <p class="split-promo-eyebrow">Smart Energy</p>
+        <h2 class="split-promo-title">Better Ingredients</h2>
         <div class="split-promo-divider"></div>
-        <p class="split-promo-text">I'm a paragraph. Double click here or click Edit Text to add some text of your own or to change the font. Tell your visitors a bit about your services.</p>
+        <p class="split-promo-text">Smart energy starts with better ingredients. Buzzbar combines clean caffeine and balanced nutrition to keep your mind clear and your energy consistent.</p>
         <a href="#products" class="split-promo-btn">Shop Now</a>
       </div>
     </div>
