Update newest flavor text to emphasize nutrition and taste

--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
         <p class="split-promo-eyebrow">Try Our</p>
         <h2 class="split-promo-title">NEWEST FLAVOR</h2>
         <div class="split-promo-divider"></div>
-        <p class="split-promo-text">I'm a paragraph. Double click here or click Edit Text to add some text of your own or to change the font. Tell your visitors a bit about your services.</p>
+        <p class="split-promo-text">Nutrition first. Flavor always. Because feeling good only works if it tastes good too.</p>
         <a href="#products" class="split-promo-btn">Shop Now</a>
       </div>
       <div class="split-promo-image">
