Rebrand from Ampra to Vero

--- a/Products.html
+++ b/Products.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title> Ampra – Natural Energy</title>
+  <title> Vero – Natural Energy</title>
   <link rel="stylesheet" href="style.css?v=16" />
   <link rel="stylesheet" href="deux-style.css" />
 </head>
@@ -17,9 +17,9 @@
   <header class="site-header" role="banner">
     <div class="container header-inner">
       <!-- Brand (clicks to top) -->
-      <a href="index.html" class="brand" aria-label="Ampra — Home">
+      <a href="index.html" class="brand" aria-label="Vero — Home">
         <span class="brand-line">
-          <span class="brand-word buzz">Ampra</span>
+          <span class="brand-word buzz">Vero</span>
         </span>
       </a>
 
@@ -46,7 +46,7 @@
         <div class="product-hero-copy">
           <div class="page-hero-eyebrow">
             <span class="dot"></span>
-            <span>The Ampra Bar</span>
+            <span>The Vero Bar</span>
             <span>A snack for thought</span>
           </div>
 
@@ -74,7 +74,7 @@
             <div class="bar-3d bar-energy-3d"></div>
           </div>
           <div class="product-info">
-            <h3>Ampra Bar</h3>
+            <h3>Vero Bar</h3>
             <p class="product-tagline">Clean energy. No crash.</p>
             <p class="product-description">
               A single bar designed to replace the random mix of coffee, energy drinks and
@@ -132,7 +132,7 @@
           <span class="info-eyebrow" id="usecase-label">Study Sessions</span>
           <h3 id="usecase-title">Stay switched on, not wired</h3>
           <p id="usecase-body">
-            Grab an Ampra Bar on the way to lectures or before a library session.
+            Grab an Vero Bar on the way to lectures or before a library session.
             You get enough caffeine to feel a difference, plus protein and fiber
             so you don’t fade 45 minutes in.
           </p>
@@ -152,7 +152,7 @@
           <h2>Why a bar, not a drink?</h2>
           <p>
             We love coffee. We just don’t love depending on it for every single
-            energy gap. Ampra Bar is a way to keep the ritual, but stop the chaos.
+            energy gap. Vero Bar is a way to keep the ritual, but stop the chaos.
           </p>
         </div>
 
@@ -178,7 +178,7 @@
           </div>
 
           <div class="comparison-card comparison-card--highlight">
-            <span class="info-eyebrow">Ampra Bar</span>
+            <span class="info-eyebrow">Vero Bar</span>
             <h3>Built for focus first</h3>
             <ul class="info-list">
               <li>Moderate caffeine + L-theanine “snack for thought”.</li>
@@ -225,7 +225,7 @@
   <footer id="footer" class="footer">
     <div class="footer-container">
       <div class="footer-column">
-        <h3 class="footer-title">Ampra Bar</h3>
+        <h3 class="footer-title">Vero Bar</h3>
         <p>Clean energy, smarter nutrition.</p>
         <div class="footer-socials">
           <a href="#" class="social-btn">Instagram</a>
@@ -237,9 +237,9 @@
       <div class="footer-column">
         <h4>Contact</h4>
         <ul>
-          <li><a href="mailto:tomwiseman@Ampra.se">tomwiseman@Ampra.se</a></li>
-          <li><a href="mailto:oliverwiseman@Ampra.se">oliverwiseman@Ampra.se</a></li>
-          <li><a href="mailto:charliewiseman@Ampra.se">charliewiseman@Ampra.se</a></li>
+          <li><a href="mailto:tomwiseman@Vero.se">tomwiseman@Vero.se</a></li>
+          <li><a href="mailto:oliverwiseman@Vero.se">oliverwiseman@Vero.se</a></li>
+          <li><a href="mailto:charliewiseman@Vero.se">charliewiseman@Vero.se</a></li>
         </ul>
       </div>
 
@@ -262,7 +262,7 @@
     </div>
 
     <div class="footer-bottom">
-      <p>© 2025 Ampra. All rights reserved.</p>
+      <p>© 2025 Vero. All rights reserved.</p>
     </div>
   </footer>
 
@@ -313,7 +313,7 @@
         study: {
           label: 'Study Sessions',
           title: 'Stay switched on, not wired',
-          body: 'Grab Ampra on the way to lectures or before a library block. You get a clear lift plus actual nutrition, so your focus lasts beyond the first 40 minutes.',
+          body: 'Grab Vero on the way to lectures or before a library block. You get a clear lift plus actual nutrition, so your focus lasts beyond the first 40 minutes.',
           bullets: [
             'Eat 20–30 minutes before you need full focus.',
             'Pairs well with one normal coffee if you want a bigger kick.',
@@ -333,7 +333,7 @@
         training: {
           label: 'Training & Recovery',
           title: 'Energy that respects your body',
-          body: 'Use Ampra as light pre-workout fuel or a post-session snack when you still have stuff to do afterwards.',
+          body: 'Use Vero as light pre-workout fuel or a post-session snack when you still have stuff to do afterwards.',
           bullets: [
             'Protein + carbs to keep you moving.',
             'Moderate caffeine instead of mega-dose pre-workouts.',
@@ -343,7 +343,7 @@
         travel: {
           label: 'Travel & Late Nights',
           title: 'Airports, buses, deadlines',
-          body: 'When you are travelling or pushing a late deadline, food choices get worse and worse. Ampra is there to keep standards up a bit.',
+          body: 'When you are travelling or pushing a late deadline, food choices get worse and worse. Vero is there to keep standards up a bit.',
           bullets: [
             'Lives in your backpack / tote without needing a fridge.',
             'Better than sugary snacks from the kiosk.',
