--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Ampra – Natural Energy</title>
+  <title>Vero – Natural Energy</title>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Yellowtail&display=swap" rel="stylesheet">
@@ -33,9 +33,9 @@
   <header class="site-header" role="banner">
     <div class="container header-inner">
       <!-- Brand (clicks to top) -->
-      <a href="#home" class="brand" aria-label="Ampra — Home">
+      <a href="#home" class="brand" aria-label="Vero — Home">
         <span class="brand-line">
-          <span class="brand-word buzz">Ampra</span>
+          <span class="brand-word buzz">Vero</span>
         </span>
       </a>
 
@@ -66,7 +66,7 @@
           <p class="hero-description">A plant-based energy bar powered by green tea caffeine, protein, and slow-release carbs — made for focus, balance, and steady energy all day.</p>
           <p class="hero-subtext">Clean caffeine. No crash. Smooth focus.</p>
           <div class="hero-cta-group">
-            <a href="#products" class="cta-primary">Get Ampra</a>
+            <a href="#products" class="cta-primary">Get Vero</a>
             <a href="Products.html" class="cta-secondary">Learn More</a>
           </div>
         </div>
@@ -185,7 +185,7 @@
           <ul class="quantity-benefits">
             <li>Perfect to get started</li>
             <li>12 days of clean energy</li>
-            <li>Try the Ampra difference</li>
+            <li>Try the Vero difference</li>
           </ul>
           <button class="quantity-cta cta-secondary">Buy Now</button>
         </div>
@@ -283,7 +283,7 @@
     <!-- LEFT: copy -->
     <div class="story-copy">
       <div class="story-3d-box">
-        <span class="section-eyebrow">Why was Ampra created?</span>""
+        <span class="section-eyebrow">Why was Vero created?</span>""
       <h2 class="story-title">
         Three brothers.<br>
         One simple idea.
@@ -307,7 +307,7 @@
         <div class="story-box story-box-solution">
           <div class="story-box-content">
             <h3>The Solution</h3>
-            <p>So we made it. Ampra is what we wish existed when we were pulling all-nighters and living off vending machine food. Real ingredients, clean energy, no BS. Just a bar that actually works.</p>
+            <p>So we made it. Vero is what we wish existed when we were pulling all-nighters and living off vending machine food. Real ingredients, clean energy, no BS. Just a bar that actually works.</p>
           </div>
         </div>
       </div>
@@ -317,7 +317,7 @@
     <!-- RIGHT: image placeholder (drop your team photo later) -->
     <aside class="story-visual">
       <!-- Replace src when you have your real team photo -->
-      <img src="IMG_8401.JPG" alt="Ampra founders" class="story-image" />
+      <img src="IMG_8401.JPG" alt="Vero founders" class="story-image" />
     </aside>
   </div>
 
@@ -330,14 +330,14 @@
       <blockquote>“Build something we want to use daily.”</blockquote>
     </article>
 
-    <article class="founder-card" data-founder-name="Charlie Wiseman" data-founder-role="Co-Founder" data-founder-story="Charlie spent a decade leading high-intensity teams before co-founding Ampra. He obsesses over workflow-friendly nutrition and turned his commute cravings into the blueprint for our Focus blend.">
+    <article class="founder-card" data-founder-name="Charlie Wiseman" data-founder-role="Co-Founder" data-founder-story="Charlie spent a decade leading high-intensity teams before co-founding Vero. He obsesses over workflow-friendly nutrition and turned his commute cravings into the blueprint for our Focus blend.">
       <div class="founder-avatar"><span>CW</span></div>
       <h3>Charlie Wiseman</h3>
       <p class="role">Co-Founder</p>
       <blockquote>“No jitters. No crash. Great taste.”</blockquote>
     </article>
 
-    <article class="founder-card" data-founder-name="Oliver Wiseman" data-founder-role="Co-Founder" data-founder-story="Oliver is the storyteller and community builder. He guides the Ampra brand, connecting with early adopters, nutritionists, and sleep scientists to make sure every bar feels like a smarter choice.">
+    <article class="founder-card" data-founder-name="Oliver Wiseman" data-founder-role="Co-Founder" data-founder-story="Oliver is the storyteller and community builder. He guides the Vero brand, connecting with early adopters, nutritionists, and sleep scientists to make sure every bar feels like a smarter choice.">
       <div class="founder-avatar"><span>OW</span></div>
       <h3>Oliver Wiseman</h3>
       <p class="role">Co-Founder</p>
@@ -358,14 +358,14 @@
           Backed by ingredients that <span class="gold">work</span>
         </h2>
         <p class="sc-sub">
-          Clean stimulation, steady focus, fewer jitters. Here’s the “why” behind Ampra — and how it’s different
+          Clean stimulation, steady focus, fewer jitters. Here’s the “why” behind Vero — and how it’s different
           from quick spikes and sugary fixes.
         </p>
       </div>
   
       <!-- Caffeine curve (illustrative) -->
       <figure class="curve">
-        <svg viewBox="0 0 640 200" role="img" aria-label="Caffeine curves: coffee spike vs Ampra smooth">
+        <svg viewBox="0 0 640 200" role="img" aria-label="Caffeine curves: coffee spike vs Vero smooth">
           <!-- grid -->
           <path d="M48 20 V180 M48 180 H610" stroke="rgba(2,6,23,.12)" stroke-width="1"/>
           <!-- labels -->
@@ -378,7 +378,7 @@
           <circle cx="270" cy="40" r="3.5" fill="#ef4444"/>
           <text x="278" y="38" fill="#ef4444" font-size="11">coffee spike</text>
   
-          <!-- Ampra smooth -->
+          <!-- Vero smooth -->
           <defs>
             <linearGradient id="buzzgrad" x1="0" y1="0" x2="1" y2="0">
               <stop offset="0" stop-color="#8b5cf6"/>
@@ -387,9 +387,9 @@
           </defs>
           <path d="M48 175 C 150 150, 260 90, 320 40 S 500 40, 610 150"
                 fill="none" stroke="url(#buzzgrad)" stroke-width="4"/>
-          <text x="505" y="130" fill="#6d28d9" font-size="11">Ampra target curve</text>
+          <text x="505" y="130" fill="#6d28d9" font-size="11">Vero target curve</text>
         </svg>
-        <figcaption>Illustrative curves: coffee can peak fast, then dip; Ampra aims for a steadier lift.</figcaption>
+        <figcaption>Illustrative curves: coffee can peak fast, then dip; Vero aims for a steadier lift.</figcaption>
       </figure>
   
       <!-- Ingredient cards -->
@@ -476,7 +476,7 @@
              carry-anywhere option with fewer spikes and no brewing.</p>
         </details>
         <details>
-          <summary>When should I use Ampra?</summary>
+          <summary>When should I use Vero?</summary>
           <p>Morning classes, deep-work blocks, pre-meeting boosts, travel days. If caffeine-sensitive, start with half.</p>
         </details>
         <details>
@@ -551,7 +551,7 @@
         <p class="nt-card-summary">Fiber is kept moderate so your stomach stays happy.</p>
         <button class="nt-more-btn" type="button"
           data-nt-title="Gut-friendly blend"
-          data-nt-detail="We steer clear of heavy sugar alcohol loads that can upset routines.|Moderate fiber plus simple ingredients keep Ampra easy to enjoy before meetings or workouts."
+          data-nt-detail="We steer clear of heavy sugar alcohol loads that can upset routines.|Moderate fiber plus simple ingredients keep Vero easy to enjoy before meetings or workouts."
         >Tap for breakdown</button>
       </article>
     </div>
@@ -615,7 +615,7 @@
         <p class="nt-note-summary">Morning classes, deep work, travel days and quick pre-gym fuel.</p>
         <button class="nt-more-btn" type="button"
           data-nt-title="When to use"
-          data-nt-detail="Grab Ampra before meetings, during study sessions or when you need a calm boost on the road.|If you are caffeine sensitive, start with half and build from there."
+          data-nt-detail="Grab Vero before meetings, during study sessions or when you need a calm boost on the road.|If you are caffeine sensitive, start with half and build from there."
         >Dive deeper</button>
       </div>
       <div class="nt-note">
@@ -631,7 +631,7 @@
         <p class="nt-note-summary">Ready-to-go energy in seconds—no blender or fridge.</p>
         <button class="nt-more-btn" type="button"
           data-nt-title="Smart nutrition, fast fuel"
-          data-nt-detail="Healthy food should be easy. Ampra is built for backpacks, bike commutes and busy studios.|You get balanced macros and clean caffeine without hauling a shaker bottle."
+          data-nt-detail="Healthy food should be easy. Vero is built for backpacks, bike commutes and busy studios.|You get balanced macros and clean caffeine without hauling a shaker bottle."
         >Dive deeper</button>
       </div>
     </div>
@@ -662,9 +662,9 @@
         </ul>
       </div>
     
-      <!-- Ampra -->
+      <!-- Vero -->
       <div class="nt-compare-card good">
-        <div class="nt-co-eyebrow">🟣 Ampra</div>
+        <div class="nt-co-eyebrow">🟣 Vero</div>
         <ul class="nt-list">
           <li><span class="good">✓</span> ~80 mg green-tea caffeine + theanine</li>
           <li><span class="good">✓</span> 10 g protein • 5 g fiber • 0 g added sugar*</li>
@@ -731,7 +731,7 @@
       </article>
 
       <article class="sp-card">
-        <blockquote>“The Ampra actually helps me study and lock in for my difficult exams.”</blockquote>
+        <blockquote>“The Vero actually helps me study and lock in for my difficult exams.”</blockquote>
         <div class="sp-stars" aria-label="5 stars">★★★★★</div>
         <footer class="sp-who">
           <div class="sp-name">Gustaf L</div>
@@ -752,7 +752,7 @@
   <footer id="footer" class="footer">
     <div class="footer-container">
       <div class="footer-column">
-        <h3 class="footer-title">Ampra</h3>
+        <h3 class="footer-title">Vero</h3>
         <p>Clean energy, smarter nutrition.</p>
         <div class="footer-socials">
           <a href="#" class="social-btn">Instagram</a>
@@ -764,9 +764,9 @@
       <div class="footer-column">
         <h4>Contact</h4>
         <ul>
-          <li><a href="mailto:tomwiseman@Ampra.se">tomwiseman@Ampra.se</a></li>
-          <li><a href="mailto:oliverwiseman@Ampra.se">oliverwiseman@Ampra.se</a></li>
-          <li><a href="mailto:charliewiseman@Ampra.se">charliewiseman@Ampra.se</a></li>
+          <li><a href="mailto:tomwiseman@Vero.se">tomwiseman@Vero.se</a></li>
+          <li><a href="mailto:oliverwiseman@Vero.se">oliverwiseman@Vero.se</a></li>
+          <li><a href="mailto:charliewiseman@Vero.se">charliewiseman@Vero.se</a></li>
         </ul>
       </div>
   
@@ -789,7 +789,7 @@
     </div>
   
     <div class="footer-bottom">
-      <p>© 2025 Ampra. All rights reserved.</p>
+      <p>© 2025 Vero. All rights reserved.</p>
     </div>
   </footer>
 
