Make Vero brand name all caps in navigation

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
       <!-- Brand (clicks to top) -->
       <a href="#home" class="brand" aria-label="Vero — Home">
         <span class="brand-line">
-          <span class="brand-word buzz">Vero</span>
+          <span class="brand-word buzz">VERO</span>
         </span>
       </a>
 
