--- a/Products.html
+++ b/Products.html
@@ -19,7 +19,7 @@
       <!-- Brand (clicks to top) -->
       <a href="index.html" class="brand" aria-label="Vero — Home">
         <span class="brand-line">
-          <span class="brand-word buzz">Vero</span>
+          <span class="brand-word buzz">VERO</span>
         </span>
       </a>
 
